--- a/main.css
+++ b/main.css
@@ -1,21 +1,23 @@
 body
 {
-	font-family: 'Oswald', sans-serif;
 	background-color: #5991ea;
 	color: pink;
+}
+
+.name
+{
+	font-family: 'Oswald', sans-serif;
+	text-align: center;
+	font-size: 12vw;
+	color: pink;
+	font-weight: bold;
 }
 
 .time
 {
 	text-align: center;
-	font-size: 10vw;
-}
-
-.name
-{
-	text-align: center;
-	font-size: 12vw;
-	color: pink;
+	font-size: 8vw;
+	font-family: 'PT Mono', monospace;
 	font-weight: bold;
 }
 
